[package]
name = "monkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "12.0.0", optional = true }

[[bin]]
name = "monkey-lang"
path = "src/bin/main.rs"
required-features = ["repl"]

[features]
default = ["repl"]
repl = ["rustyline"]
wasm = []